wip authentications tutorial

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -292,7 +292,7 @@
     "Testing user": "Testing user",
     "Users search base": "Users search base",
     "Simple user filter": "Simple user filter",
-    "Tenants admin filter": "Tenants admin filter",
+    "Daioku admin filter": "Daikoku admin filter",
     "Search filter": "Search filter",
     "Admin username (bind DN)": "Admin username (bind DN)",
     "Admin password": "Admin password",
