--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -291,8 +291,8 @@
   "Users search base": "Base de recherche utilisateurs",
   "Testing connection": "Test de connexion",
   "Testing user": "Test avec un utilisateur",
-  "Simple user filter": "Filtre de groupe",
-  "Tenants admin filter": "Filtre de groupe Admin.",
+  "Simple user filter": "Filtre de groupe utilisateurs",
+  "Daikoku admin filter": "Filtre de groupe Daikoku admin",
   "Search filter": "Filtre de recherche",
   "Admin username (bind DN)": "Nom d'utilisateur admin (bind DN)",
   "Admin password": "Mot de passe admin",
