add filter in home page
update gql to get visibleApis with owner filter

--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -30,9 +30,10 @@
   "Daikoku description start": "Daikoku est le parfait compagnon d'",
   "Daikoku description end": " pour gérer la documentation de vos APIs préférées et les exposer à votre communauté de développeurs. Vous pourrez aussi publier en quelques secondes une nouvelle API",
   "result": "résultat",
-  "matching": "correspondant à",
-  "categorised in": "catégorisé comme",
-  "tagged": "taggé(s) comme",
+  "filter.preview.match": "correspondant à",
+  "filter.preview.category": "catégorisé comme",
+  "filter.preview.tag": "taggé(s) comme",
+  "filter.preview.team": "proposé par",
   "clear filter": "supprimer les filtres",
   "Search your API...": "Rechercher une API...",
   "Previous": "Précédent",
@@ -1261,6 +1262,7 @@
   "otoroshi.missing.target": "Cible Otoroshi manquante",
   "apiList.tag.search": "Recherchez un tag",
   "apiList.category.search": "Recherchez une catégorie",
+  "apiList.team.search": "Recherchez une équipe",
   "team.email.verification.send": "Mail envoyé à %s pour vérifier cette adresse email.",
   "team.email.alreadyVerified": "Cet email est déjà vérifié",
   "team.email.notVerified": "Envoyer un mail",
