--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -30,9 +30,10 @@
     "Daikoku description start": "Daikoku is the perfect",
     "Daikoku description end": "companion to manage, document, and expose your beloved APIs to your developers community. Publish a new API in a few seconds",
     "result": "result",
-    "matching": "matching",
-    "categorised in": "categorized in",
-    "tagged": "tagged",
+    "filter.preview.match": "matching",
+    "filter.preview.category": "categorized in",
+    "filter.preview.tag": "tagged",
+    "filter.preview.team": "produced by",
     "clear filter": "clear filter",
     "Search your API...": "Search your API...",
     "Previous": "Previous",
@@ -1261,6 +1262,7 @@
     "otoroshi.missing.target": "Missing Otoroshi target",
     "apiList.tag.search": "Search a tag",
     "apiList.category.search": "Search a category",
+    "apiList.team.search": "Search a team",
     "team.email.verification.send": "Mail sent to %s for verify this email address.",
     "team.email.alreadyVerified": "This mail is already verified",
     "team.email.notVerified": "Send a mail",
