--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -375,7 +375,7 @@
     "s": "Otoroshi",
     "p": "Otoroshis"
   },
-  "Swagger": "OpenAPI",
+  "Swagger": "Spécification",
   "Testing": "Test",
   "Small desc.": "Desc. courte",
   "Current version": "Version courante",
@@ -458,7 +458,7 @@
   "Delete plan": "Supprimer le plan",
   "Headers": "Headers",
   "Use swagger content": "Rédiger le contenu OpenAPI",
-  "swagger.additional.conf.label": "Configuration Redoc",
+  "swagger.additional.conf.label": "Configuration UI",
   "swagger.additional.conf.help": "Valeur optionnelle. voir https://redocly.com/docs/redoc/deployment/react/#optional---pass-options",
   "Auth. name": "Nom Auth.",
   "The auth. name in api swagger": "Le nom auth. dans le swagger API",
