--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -458,7 +458,7 @@
     "Delete plan": "Delete plan",
     "Headers": "Headers",
     "Use swagger content": "Write OpenAPI definition",
-    "swagger.additional.conf.label": "UI configuration",
+    "swagger.additional.conf.label": "Configuration for API specification display",
     "swagger.additional.conf.help": "Optional value. see https://redocly.com/docs/redoc/deployment/react/#optional---pass-options",
     "Auth. name": "Auth. name",
     "The auth. name in api swagger": "The auth. name in API swagger",
