--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -534,6 +534,7 @@
   "Reset password": "Réinitialisation du mot de passe",
   "account.reset.error.not.valid.anymore": "Votre demande de réinitialisation de mot de passe n'est plus valide (sa validité est limitée à 15 minutes). Merci de créer une nouvelle demande.",
   "account.reset.error.bad.creation.id": "Votre demande de réinitialisation de mot de passe n'est pas valide. Merci de créer une nouvelle demande.",
+  "account.reset.error.user.not.found": "Votre compte n'existe plus. Merci d'en créer un nouveau.",
   "password.reset.done": "Vous recevrez un courrier électronique à l'adresse %s pour terminer le processus de réinitialisation de votre mot de passe. Vous aurez 15 minutes à partir de maintenant pour terminer votre processus de réinitialisation de mot de passe.",
   "Create your account": "Créer un compte",
   "Reset your password": "Réinitialisation votre mot de passe",
