--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1383,6 +1383,9 @@
     "anonymous.reporting.popup.info": "Enable Anonymous reporting for helping us ? This will help us a lot. More info in ",
     "anonymous.reporting.popup.no": "Anonymous Reporting not accepted.",
     "anonymous.reporting.enable": "Enable anonymous reporting",
+    "anonymous.reporting.title": "Anonymous reporting",
+    "anonymous.reporting.more.info": "More information at",
+    "anonymous.reporting.more.info.link": " Daikoku documentation",
     "aggregation.button.subscription.usual.label": "Subscribe with a new api key",
     "aggregation.button.subscription.disable.label": "No api keys are present in your team",
     "aggregation.button.subscription.enable.label": "Subscribe using an existing api key",
