--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1389,5 +1389,9 @@
     "aggregation.button.subscription.usual.label": "Subscribe with a new api key",
     "aggregation.button.subscription.disable.label": "No api keys are present in your team",
     "aggregation.button.subscription.enable.label": "Subscribe using an existing api key",
-    "documentation.not.setted.message":"it's seems that this plan has no documentation setted"
+    "documentation.not.setted.message":"it's seems that this plan has no documentation setted",
+    "profile.cmscli.reset.title": "CMS CLI",
+    "profile.cmscli.reset.token": "Reset token",
+    "profile.cmscli.copy.token": "Copy",
+    "profile.cmscli.paste.token": "Copied"
 }
