add labels (rgaa)

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1384,5 +1384,8 @@
     "aggregation.button.subscription.usual.label": "Subscribe with a new api key",
     "aggregation.button.subscription.disable.label": "No api keys are present in your team",
     "aggregation.button.subscription.enable.label": "Subscribe using an existing api key",
-    "documentation.not.setted.message":"it's seems that this plan has no documentation setted"
+    "documentation.not.setted.message":"it's seems that this plan has no documentation setted",
+    "view.grid":"View grid",
+    "view.list":"View list",
+    "tenant.logo":"Tenant logo"
 }
