--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1384,5 +1384,8 @@
   "aggregation.button.subscription.usual.label": "Souscrire avec une nouvelle clé d'API",
   "aggregation.button.subscription.disable.label": "Aucune clé d'API",
   "aggregation.button.subscription.enable.label": "Souscrire en étendant une clé d'API existante",
-  "documentation.not.setted.message":"Il semble qu'aucune documentation ne soit définie pour ce plan"
+  "documentation.not.setted.message":"Il semble qu'aucune documentation ne soit définie pour ce plan",
+  "view.grid":"Vue grille",
+  "view.list":"Vue liste",
+  "tenant.logo":"Logo du tenant"
 }
