--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1393,5 +1393,11 @@
     "profile.cmscli.reset.title": "CMS CLI",
     "profile.cmscli.reset.token": "Reset token",
     "profile.cmscli.copy.token": "Copy",
-    "profile.cmscli.paste.token": "Copied"
+    "profile.cmscli.paste.token": "Copied",
+    "authentication.form.jwtverifier.label": "JWT verfier",
+    "authentication.form.jwtverifier.sha.size.label": "SHA size",
+    "authentication.form.jwtverifier.hmacsecret.label": "Hmac secret",
+    "authentication.form.jwtverifier.base64.label": "Base64 encoded secret",
+    "authentication.form.jwtverifier.public.key.label": "Public key",
+    "authentication.form.jwtverifier.private.key.label": "Private key"
 }
